Laço de repetição

--- a/02-variveis-operadores/03-array.html
+++ b/02-variveis-operadores/03-array.html
@@ -13,7 +13,7 @@
         let fruta;
         
         // Inicialização
-        fruta =["maça","banana", "laranja"];
+        fruta =["Maça","Banana", "Laranja"];
    
         // Declaração e Iniciazalição
         let notas = [8,7,9,10]
@@ -33,7 +33,7 @@
    document.write(`A array frutas possui ${fruta.length} elementos <br> `);
    
    // Adiciona um elemento no final do array nomeArray.push("novoValor");
-   fruta.push("uva");
+   fruta.push("Uva");
    document.write(`Elemento da Array: ${fruta} <br>`);
    document.write("manga");
    document.write(`Elemento da array: ${fruta} <br>`);
@@ -50,7 +50,7 @@
 
    //Remover um elemento de uma posição especifica nomeArray.slice(x,x);
    fruta.splice(3,1);
-   document.write(`Elemento da arry: &{fruta} <br>`);
+   document.write(`Elemento da arry: ${fruta} <br>`);
 
         
 
