desvio condicionais, operadores

--- a/03-desvio-loop/04-desvio-condicional-operadores-condicionais.html
+++ b/03-desvio-loop/04-desvio-condicional-operadores-condicionais.html
@@ -10,8 +10,8 @@
 
 <body>
     <script>
-        var x = parseInt(prompt(""));
-        var y = parseInt(prompt(""));
+        let x = parseInt(prompt(""));
+        let y = parseInt(prompt(""));
         if (x > y) {
             document.write("x é maior que y.");
         }
