--- a/03-desvio-loop/05-desvio-condicional-se-aninhado.html
+++ b/03-desvio-loop/05-desvio-condicional-se-aninhado.html
@@ -10,8 +10,8 @@
 
 <body>
     <script>
-        var x = parseInt(prompt(""));
-        var y = parseInt(prompt(""));
+        let x = parseInt(prompt(""));
+        let y = parseInt(prompt(""));
         if (x > 5) {
             if (y > 2) {
                 document.write("x é maior que 5 e y é maior que 2.");
