--- a/03-desvio-loop/07-controle-switch.html
+++ b/03-desvio-loop/07-controle-switch.html
@@ -10,7 +10,7 @@
 
 <body>
     <script>
-        var diaDaSemana = parseInt(prompt("Dia da semana"));
+        let diaDaSemana = parseInt(prompt("Dia da semana"));
 
         switch (diaDaSemana) {
             case 1:
