--- a/03-desvio-loop/08-controle-switch-estados-brasil.html
+++ b/03-desvio-loop/08-controle-switch-estados-brasil.html
@@ -10,8 +10,8 @@
  <script>
 
 
-    var uf = (prompt("Dia da semana"));
-    var nomeEstado;
+    let uf = (prompt("Diite a unidade federal"));
+    let nomeEstado;
     
     switch (uf) {
         case "AC":
