--- a/03-desvio-loop/09-laco-de-repeticao-for.htm
+++ b/03-desvio-loop/09-laco-de-repeticao-for.htm
@@ -10,10 +10,14 @@
 
 <body>
     <script>
-        var x = (prompt("Valor"))
-        for (var i = 0; i < 5; i++) {
-            document.write("Número: " + i + "<br>");
-        }
+        let inicio = parseInt(prompt("Valor Incial"))
+        let fim = parseInt(prompt("Valor Final"))
+        if(incio < fim){
+            for (let i = inicio; i < fim; i++)
+                document.write("Número: " + i + "<br>");
+            }
+            
+
     </script>
 </body>
 
