--- a/03-desvio-loop/10-laco-de-repeticao-for-tabuada.html
+++ b/03-desvio-loop/10-laco-de-repeticao-for-tabuada.html
@@ -11,8 +11,8 @@
 <body>
     <script>
 
-        var numero = parseInt(prompt("Número desejado")); // Substitua pelo número desejado
-        var resultado = "";
+        let numero = parseInt(prompt("Número desejado")); // Substitua pelo número desejado
+        let resultado = "";
 
         for (var i = 1; i <= 10; i++) {
             resultado += numero + " x " + i + " = " + (numero * i) + "<br>";
