--- a/03-desvio-loop/par-ou-impar.html
+++ b/03-desvio-loop/par-ou-impar.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
-<html lang="pt_BR">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gil Marcos</title>
+    <title>Gil</title>
 </head>
 
 <body>
     <script>
-        let idade = parseInt(prompt("Informe da idade"));
-        if (idade >= 18) {
-            document.write("Pode votar!");
+
+        let n = (prompt("Solicitar um numero impar ou par"));
+        if (n%2 == 0) {
+           document.write("Par");
+        } else {
+          document.write("Impar"); 
         }
+
     </script>
 
 </body>
