--- a/03-desvio-loop/02-desvio-condicional-se-senao.html
+++ b/03-desvio-loop/02-desvio-condicional-se-senao.html
@@ -10,7 +10,7 @@
 
 <body>
     <script>
-        var idade = parseInt(prompt("Qual e sua idade"));
+        let idade = parseInt(prompt("Qual e sua idade"));
         if (idade >= 18) {
             document.write("Pode votar!");
         } else {
